--- a/practica parcial.cbp
+++ b/practica parcial.cbp
@@ -54,6 +54,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="mascotas.h" />
+		<Unit filename="raza.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="raza.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
